# CodePilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_PLAN.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/api/: routes.py
app/core/: config.py  middleware.py  security.py
app/db/: __init__.py  models.py
app/services/: analysis.py  browser.py  diagnostics.py  embedding.py  generation.py  index_policy.py  indexer.py  llm.py  models.py  parser.py  repository.py  retriever.py  review.py  run_store.py  search.py  state_store.py
docs/: demo-checklist.md  demo-script.md  development-guide.md  interview-guide.md  interview-qa.md  project-status.md  resume-guide.md
docs/adr/: 0001-offline-first-agent.md  0002-local-json-state.md  0003-optional-api-key.md  README.md
tests/: conftest.py  test_api.py  test_config.py  test_llm.py  test_parser.py  test_retriever.py  test_state_store.py
