[project]
name = "codepilot"
version = "0.1.0"
requires-python = ">=3.13"
description = "AI software engineering agent for repository indexing, code retrieval, review, and documentation generation."
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.1",
    "pgvector>=0.3.2",
    "redis>=5.0.8",
    "langchain>=0.2.14",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.7",
    "pyright>=1.1.376",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["app", "tests"]
